# microtune

./: .gitignore  .gitmodules  AudioPluginHost.filtergraph  CMakeLists.txt  FireAtWill.jucer  README.md  azure-pipelines.yml  build_mac.sh  build_win.sh
Resources/: CMakeLists.txt  magic.xml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TuneKeyboard.h
cmake/: versiontools.cmake
install/mac/: README.md  Stochas.pkgproj  install.txt
install/win/: README.md  install.iss
scripts/: release-notes.sh
src/: Constants.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetListBox.h  version.cpp.in  version.h
text/: infobox.txt
